--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <script type="module">
     import React from 'react';
     import { createRoot } from 'react-dom/client';
-    import MTGCommanderApp from './mtg-commander-improved.jsx';
+    import MTGCommanderApp from '/commander/mtg-commander-improved.jsx';
     
     const root = createRoot(document.getElementById('root'));
     root.render(React.createElement(MTGCommanderApp));
@@ -104,7 +104,7 @@
     // Registrar Service Worker para PWA
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/service-worker.js')
+        navigator.serviceWorker.register('/commander/service-worker.js')
           .then(registration => {
             console.log('Service Worker registrado:', registration);
           })
