Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <script type="module">
     import React from 'react';
     import { createRoot } from 'react-dom/client';
-    import MTGCommanderApp from '/commander/mtg-commander-improved.jsx';
+    import MTGCommanderApp from '/commander/mtg-commander-improved.js';
     
     const root = createRoot(document.getElementById('root'));
     root.render(React.createElement(MTGCommanderApp));
